Fixed label overflow issue

--- a/react-app/src/stylesheets/ResultPage.scss
+++ b/react-app/src/stylesheets/ResultPage.scss
@@ -42,6 +42,7 @@
   font-size: 60px;
 }
 
-.result-label {
+.accordion-result-label {
   overflow-wrap: break-word;
+  max-width: 190px;
 }
